--- a/prompt-generator/styles/style.css
+++ b/prompt-generator/styles/style.css
@@ -44,3 +44,34 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+.button-container {
+    flex-direction: column;
+    display: flex;
+    position: fixed;
+    right: 10px;
+    gap: 20px; 
+    top: 70%;
+}
+
+.circle-button {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    text-decoration: none;
+}
+.circle-button i {
+    color: white;
+}
+
+/* Additional styles for hover effect, if needed */
+.circle-button:hover {
+    background-color: #45a049;
+}
+
