--- a/prompt-generator/styles/style2.css
+++ b/prompt-generator/styles/style2.css
@@ -31,21 +31,35 @@ a:visited{
 
 }
 .image-container{
-    width: 30%;
+    margin-top: 50px;
+    width: 40%;
     padding-left: 50px;
+    background-image: url("../assets/robot.jpeg");
+    background-repeat: no-repeat;
+    background-size: contain; /* This ensures the image does not cover the whole div */
+    background-position: center;
 }
+
 .description{
     width: 40%;
+    font-size: 17px;
 }
+.description a , .color1{
+    color: #b5c6a8;
+    font-size: 19px;
+}
+
+
 .title{
-    color : #92a545;
     margin-top: 30px;
+    color: #739838;
+    font-size:30px;
 }
 .img-description{
     display: flex;
-    height: 100;
+    height: 60vh;
     width: 100vw;
-    gap : 200px;
+    gap : 100px;
 }
 
 .container{
@@ -54,7 +68,7 @@ a:visited{
     flex-direction: column;
 }
 button{
-    margin-top: 30px;
+    margin-top: 80px;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     height: 40px;
